[package]
name = "counts_to_csv"
version = "0.1.0"
authors = ["Swetha Ramesh <swetharamesh19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
csv = "1.1.6"
hdf5 = "0.7.1"
ndarray = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
sprs = "0.9.3"
